# veloNode

./: deploy.ps1
backend/: package-lock.json  package.json  server.js
contract/: Anchor.toml
contract/programs/velonode/: Cargo.toml
contract/programs/velonode/src/: lib.rs
frontend/: FRONTEND_STRUCTURE.md  index.html  package-lock.json  package.json
frontend/src/: App.jsx  AppRouter.jsx  config.js
frontend/src/components/: CinematicHero.jsx  Footer.css  Footer.jsx  Hero.css  Hero.jsx  HowItWorks.css  HowItWorks.jsx  Navbar.css  Navbar.jsx  Security.css  Security.jsx  TechStack.css  TechStack.jsx
frontend/src/components/dashboard/: DashboardLayout.jsx  HelpSupport.jsx  Marketplace.jsx  MyNodes.jsx  Overview.jsx  Security.jsx  UserProfile.jsx
frontend/src/components/integration/: AssignedJobs.jsx  CreateJob.jsx  CreatedJobs.jsx  HeartbeatStatus.jsx  IntegrationDashboard.jsx  JobList.jsx  UserDashboard.jsx  WalletConnect.jsx
frontend/src/components/ui/: Button.css
frontend/src/pages/: DashboardPage.jsx  HomePage.jsx  LoginPage.jsx
frontend/src/styles/: global.css  variables.css
worker/: Cargo.toml  WORKER_SETUP.md  mock_worker.py
worker/src/: main.rs
