[package]
name = "velonode"
version = "0.1.0"
description = "VeloNode Solana Program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "velonode"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.28.0"
anchor-spl = "0.28.0"
